# fakemote

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  link.ld
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
arm/: Makefile  compat.h  conf.c  conf.h  libc.c  link.ld  main.c  start.s
arm/cios-lib/: Makefile  direct_syscalls.h  direct_syscalls.s  fat_tools.c  fat_tools.h  hollywood.h  ios.c  ios.h  ipc.c  ipc.h  isfs.c  isfs.h  libwbfs_os.h  log.c  log.h  mem.c  mem.h  sdio.c  sdio.h  stealth.c  stealth.h  str_utils.c  str_utils.h  swi_mload.c  swi_mload.h  syscalls.h  syscalls.s  syscalls_dbg.c  syscalls_dbg.h  timer.c  timer.h  tiny-printf.c  tools.h  tools.s  types.h  usbstorage.c  usbstorage.h  vsprintf.c  vsprintf.h
arm/cios-lib/libwbfs/: libwbfs.c  libwbfs.h  rijndael.c  wiidisc.c  wiidisc.h
arm/include/: conf.h  fake_wiimote_mgr.h  fakedev.h  hci.h  hci_state.h  input_device.h  usb.h  usb_device_drivers.h  usb_hid.h  utils.h  wiimote.h
arm/source/: fake_wiimote_mgr.c  fakedev.c  hci_state.c  main.c  usb_driver_ds3.c  usb_driver_ds4.c  usb_hid.c
cios-lib/: CMakeLists.txt  Makefile  direct_syscalls.h  ios.c  ipc.h  mem.h  str_utils.h  swi_mload.h  syscalls.h  syscalls_dbg.c  syscalls_dbg.h  timer.c  tiny-printf.c  tools.h  types.h
embedded-game-controller/: CMakeLists.txt  button_map.c  client.c  client.h  driver_api.h  egc.c  egc.h  egc_types.h  input_device.h  internals.h  platform.h  usb.h  usb_backend.h  usb_device_drivers.h  usb_hid.c  usb_hid.h  utils.h
embedded-game-controller/backends/: libusb.c  ogc.c  ogc_arm.c  ogc_arm.h
embedded-game-controller/example/: CMakeLists.txt  main.c
embedded-game-controller/usb_drivers/: dragonrise.c  sony_ds3.c  sony_ds4.c
include/: HID_controllers.h  bluetooth.h  bt_device_mgr.h  button_map.h  compat.h  conf.h  fake_wiimote.h  fake_wiimote_mgr.h  globals.h  hci.h  hci_names.h  hci_state.h  injmessage.h  input_device.h  mload.h  nintendont_hid.h  usb.h  usb_device_drivers.h  usb_hid.h  utils.h  wiimote.h  wiimote_crypto.h
ogc-usb-hid/: CMakeLists.txt  button_map.c  client.c  client.h  internals.h  usb_hid.c
ogc-usb-hid/usb_drivers/: dragonrise.c  sony_ds3.c
source/: CMakeLists.txt  bt_device_mgr.c  button_map.c  button_map.h  conf.c  fake_wiimote.c  fake_wiimote_mgr.c  hci.h  hci_state.c  injmessage.c  input_device.c  libc.c  link.ld  main.c  mload.c  usb_driver_ds.c  usb_driver_ds3.c  usb_driver_ds4.c  usb_driver_generic_usb_pid_0006.c  usb_driver_nintendont.c  usb_driver_xbox.c  usb_hid.c  wiimote.h  wiimote_crypto.c
source/usb_drivers/: dj_hero_turntable.c  dragonrise.c  guitar_hero_drums.c  guitar_hero_guitar.c  sony_ds3.c  sony_ds4.c
